--- a/Kubernetes for Absolute Beginners - Udemy - KodeKloud/demos/deployment.yaml
+++ b/Kubernetes for Absolute Beginners - Udemy - KodeKloud/demos/deployment.yaml
@@ -8,11 +8,11 @@ metadata:
 spec:
   selector:
     matchLabels:
-      env: production
-  replicas: 3
+      app: myapp
+  replicas: 4
   template:
     metadata: 
-      name: nginx
+      name: nginx-2
       labels:
         app: myapp
     spec:
