--- a/HelloWorld_Project/deployment_HelloWorld.yaml
+++ b/HelloWorld_Project/deployment_HelloWorld.yaml
@@ -1,11 +1,27 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: python-hello-world-pod
+  name: python-hello-world-deploy
   labels:
+    name: python-hello-world-deploy
     app: python-hello-world
 spec:
-  containers:
-  - name: python-hello-world-container
-    image: python-hello-world
-    imagePullPolicy: IfNotPresent #necessary to avoid cache problems
+  replicas: 1
+  selector:
+    matchLabels:
+      name: python-hello-world-pod
+      app: python-hello-world
+    
+  template:
+    metadata:
+      name: python-hello-world-pod
+      labels:
+        name: python-hello-world-pod
+        app: python-hello-world
+    spec:
+      containers:
+        - name: python-hello-world-container
+          image: python-hello-world
+          ports:
+            - containerPort: 5000
+          imagePullPolicy: IfNotPresent #necessary to avoid cache problems
