--- a/HelloWorld_Project/service_TestEnvironment.yaml
+++ b/HelloWorld_Project/service_TestEnvironment.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world-service
+  name: test-environment-service
   labels:
-    name: hello-world-service
-    app: python-hello-world
+    name: test-environment-service
+    app: test-environment
 spec:
   type: NodePort
   ports:
     - port: 80
-      targetPort: 5000
+      targetPort: 5001
   selector:
-    name: python-hello-world-pod
-    app: python-hello-world
+    name: test-environment-pod
+    app: test-environment
